--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = daveramseymusic
 
 ### Optional ###
-requirements = fastcore pandas fastai gradio
+requirements = fastcore pandas fastai gradio torch
 # dev_requirements = 
 # console_scripts =
