delete old models and dls

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = daveramseymusic
 
 ### Optional ###
-requirements = fastcore torch pandas fastai gradio
+requirements = fastcore pandas fastai gradio
 # dev_requirements = 
 # console_scripts =
